--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="/api/style.css">
 </head>
 <body>
-    <a href="/api/test2.html">Hello World</a>
+    <a href="/test2.html">Hello World</a>
     <br>
-    <a href="/api/home">Home</a>
+    <a href="/home">Home</a>
+    <%- include('test2.html') %>
 </body>
 </html>
