--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/resources/styles/style.css">
 </head>
 <body>
-    <a href="/test2.html">Hello World</a>
+    <a href="/about">Hello World</a>
     <br>
     <a href="/home">Home</a>
     <%- include('test2.html') %>
