se agrefo el desktop a la ruta para los enlaces y se creo un archibo para purebas de jquery

--- a/views/desktop/index.ejs
+++ b/views/desktop/index.ejs
@@ -11,5 +11,8 @@
     <a href="/about">Hello World</a>
     <br>
     <a href="/home">Home</a>
+    <br>
+    <a href="/gene">prueba</a>
+
 </body>
 </html>
