conecion exitosa de jquery y css en el archivo prueba

--- a/views/desktop/genres/prueba.ejs
+++ b/views/desktop/genres/prueba.ejs
@@ -2,15 +2,20 @@
 <html>
 <head>
 	<title>prueba de jquery</title>
+	<link rel="stylesheet" type="text/css" href="js/jquery1.js">
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="js/jquery1.js">
+	<script type="text/javascript" src="js/jquery1.js">
+		
+	</script>
+	
 </head>
 <body>
 	<div>
 	<input type="button" id="manga" value="manga">
 	<input type="button" id="novela" value="novela">
 	</div>
+	<br><br>
 
 	<div id="respu" style="display: none;">
 		
