funciona ya la logica de jquery en genero

--- a/views/desktop/genres/prueba.ejs
+++ b/views/desktop/genres/prueba.ejs
@@ -12,13 +12,13 @@
 </head>
 <body>
 	<div>
-	<input type="button" id="manga" value="manga">
-	<input type="button" id="novela" value="novela">
+	<input type="button" id="misterio" value="misterio">
+	<input type="button" id="accion" value="accion">
 	</div>
 	<br><br>
 
-	<div id="respu" style="display: none;">
-		
+	<div id="conte" style="display: none;">
+		<div id="respu"></div>
 	</div>
 
 </body>
