--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,15 @@
 body{
 	background-color: red;
 }
+
+button{
+    font-size: 1.25em;
+    font-weight: bold;
+    padding: 10px 30px;
+    border-radius: 5px;
+    border: 2px solid rgba(0,0,0,0.3);
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    color: white;
+    background-color: #E0AE04;
+
+}
