prueba visual de como se deberia ver con variso botones

--- a/views/desktop/genres/prueba.ejs
+++ b/views/desktop/genres/prueba.ejs
@@ -15,11 +15,14 @@
 	<button id="misterio" value="misterio">misterio</button>
 	<br>
 	<button id="accion" value="accion">accion</button>
+	<button></button>
+	<button></button>
+	<button></button>
 	
 	</div>
 	<br><br>
 
-	<div id="conte" style="display: none;">
+	<div id="conte" style="display: none; border: 1px">
 		<div id="respu"></div>
 	</div>
 
