para que vean como se ve

--- a/views/desktop/genres/generos.ejs
+++ b/views/desktop/genres/generos.ejs
@@ -15,6 +15,9 @@
 	<button id="misterio" value="misterio">misterio</button>
 	<br>
 	<button id="accion" value="accion">accion</button>
+	<button id="xd">ej1</button>
+	<button id="cfg">ej2</button>
+	<button id="dfgh">ej3</button>
 	
 	</div>
 	<br><br>
