--- a/views/desktop/genres/prueba.ejs
+++ b/views/desktop/genres/prueba.ejs
@@ -12,12 +12,12 @@
 </head>
 <body>
 	<div id="generos">
-	<button id="misterio" value="misterio">misterio</button>
+	<button id="misterio" value="misterios">misterios</button>
 	<br>
-	<button id="accion" value="accion">accion</button>
-	<button></button>
-	<button></button>
-	<button></button>
+	<button id="accion" value="accion1234">accion123</button>
+	<button id="xd">ej1</button>
+	<button id="cfg">ej2</button>
+	<button id="dfgh">ej3</button>
 	
 	</div>
 	<br><br>
