--- a/views/mobile/index.ejs
+++ b/views/mobile/index.ejs
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
-    <%- include('../nav/index.html') %>
+    <%- include('nav/index.html') %>
     <a href="/about">Hello World</a>
     <br>
     <a href="/home">Home</a>
