--- a/views/mobile/login/index.ejs
+++ b/views/mobile/login/index.ejs
@@ -7,11 +7,12 @@
     <title>Login</title>
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/tailwind.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <div class="loginBackground flex flex-row justify-center items-center">
-        <div class="loginContainer mt-7 flex flex-col items-center justify-center w-64 bg-slate-200">
+        <div class="loginContainer mt-7 flex flex-col items-center justify-center w-64 bg-red">
             <div class="flex flex-row items-center justify-center w-full">
                 <p id="signIn" class="text-3xl m-2 mt-3 w-3/5 cursor-pointer">Sign In</p>
                 <p id="signIn" class="text-3xl m-2 mt-3 w-3/5 cursor-pointer">Sign Up</p>
