--- a/views/mobile/index.ejs
+++ b/views/mobile/index.ejs
@@ -15,6 +15,8 @@
     <a href="/about">Hello World</a>
     <br>
     <a href="/home">Home</a>
+    <br>
+    <a href="/genres">Generos</a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
