--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,100 +5,37 @@ body{
 /*COLORES*/
 
 .fondo-gray{
-	background: #323234!important;
-	background-color: #323234!important;
+	background-color: #323234;
 }
 .fondo-black{
-	background: #1e1e1f!important;
-	background-color: #1e1e1f!important;
+	background-color: #1e1e1f;
 }
 .fondo-white{
-	background: #f2f3e2!important;
-	background-color: #f2f3e2!important;
+	background-color: #f2f3e2;
 }
 .fondo-red{
-	background: #d52e4a!important;
-	background-color: #d52e4a!important;
+	background-color: #d52e4a;
 }
 
 .texto-gray{
-	color: #323234!important;
+	color: #323234;
 }
 .texto-black{
-	color: #1e1e1f!important;
+	color: #1e1e1f;
 }
 .texto-white{
-	color:#F2F3E2!important;
+	color:#F2F3E2;
 }
 .texto-red{
-	color:#d52e4a!important;
+	color:#d52e4a;
 }
 
 
 
 /*ESTILOS DEL NAV*/
-.bd-placeholder-img {
-	font-size: 1.125rem;
-	text-anchor: middle;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	user-select: none;
-  }
 
-  @media (min-width: 768px) {
-	.bd-placeholder-img-lg {
-	  font-size: 3.5rem;
-	}
-  }
 
-  .b-example-divider {
-	height: 3rem;
-	background-color: rgba(0, 0, 0, .1);
-	border: solid rgba(0, 0, 0, .15);
-	border-width: 1px 0;
-	box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-  }
-
-  .b-example-vr {
-	flex-shrink: 0;
-	width: 1.5rem;
-	height: 100vh;
-  }
-
-  .bi {
-	vertical-align: -.125em;
-	fill: currentColor;
-  }
-
-  .nav-scroller {
-	position: relative;
-	z-index: 2;
-	height: 2.75rem;
-	overflow-y: hidden;
-  }
-
-  .nav-scroller .nav {
-	display: flex;
-	flex-wrap: nowrap;
-	padding-bottom: 1rem;
-	margin-top: -1px;
-	overflow-x: auto;
-	text-align: center;
-	white-space: nowrap;
-	-webkit-overflow-scrolling: touch;
-  }
-
-button{
-    font-size: 1.25em;
-    font-weight: bold;
-    padding: 10px 30px;
-    border-radius: 5px;
-    border: 2px solid rgba(0,0,0,0.3);
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
-    color: #F2F3E2;
-    background-color: #D52E4A;
-
-}
+ 
 
 /*ESTILOS DEL LOGIN*/
 
