--- a/views/mobile/login/index.ejs
+++ b/views/mobile/login/index.ejs
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="loginBackground flex flex-row justify-center items-center">
-        <div class="loginContainer mt-7 flex flex-col items-center justify-center w-64 bg-red">
+        <div class="loginContainer mt-7 flex flex-col items-center justify-center w-64 fondo-gray">
             <div class="flex flex-row items-center justify-center w-full">
                 <p id="signIn" class="text-3xl m-2 mt-3 w-3/5 cursor-pointer">Sign In</p>
                 <p id="signIn" class="text-3xl m-2 mt-3 w-3/5 cursor-pointer">Sign Up</p>
