--- a/views/mobile/nav/index.html
+++ b/views/mobile/nav/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <nav class="navbar navbar-expand-lg fondo-black text-white" aria-label="Book-lovers">
-    <div class="container">
+    <div class="container texto-white">
       <a class="navbar-brand" href="#">Container</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -20,13 +20,13 @@
       <div class="collapse navbar-collapse" id="navbarsExample07">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active texto-white" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link texto-white" href="#">Link</a>
+            <a class="nav-link" href="#">Link</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled texto-white">Hola</a>
+            <a class="nav-link disabled">Hola</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle texto-white" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
