--- a/views/mobile/nav/index.html
+++ b/views/mobile/nav/index.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<nav class="navbar navbar-expand-lg fondo-black text-white" aria-label="Book-lovers">
+<nav class="navbar navbar-expand-lg fondo-red text-white" aria-label="Book-lovers">
     <div class="container">
       <a class="navbar-brand" href="#">Container</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +23,7 @@
             <a class="nav-link active texto-white" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link texto-white" href="#">Link</a>
+            <a class="nav-link link-white" href="#">Link</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled texto-white">Hola</a>
