--- a/views/mobile/nav/index.html
+++ b/views/mobile/nav/index.html
@@ -5,50 +5,20 @@
   <title>Document</title>
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/tailwindcss.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://kit.fontawesome.com/ca713a058f.js" crossorigin="anonymous"></script>
 
 </head>
 
+<nav class="p-10 fondo-black shadow">
+  <div class="texto-white">
+    <span class=" text-3xl cursor-pointer">
+      <i class="fa-solid fa-book-open"></i>
+      Book Lovers
 
-<nav class="navbar navbar-expand-lg fondo-red text-white" aria-label="Book-lovers">
-    <div class="container">
+    </span>
 
-<nav class="navbar navbar-expand-lg fondo-black text-white" aria-label="Book-lovers">
-    <div class="container texto-white">
+  </div>
 
-      <a class="navbar-brand" href="#">Container</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarsExample07">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-
-            <a class="nav-link link-white" href="#">Link</a>
-
-            <a class="nav-link" href="#">Link</a>
-
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Hola</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle texto-white" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-        </ul>
-        <form role="search">
-          <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-        </form>
-      </div>
-    </div>
-  </nav>
+</nav>
