--- a/views/mobile/home/index.ejs
+++ b/views/mobile/home/index.ejs
@@ -8,8 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    Javascriptery
-    <%- include('../test2.html') %>
+   
+
+    esto es una prueba del home
 </body>
 </html>
 
