rutas pronadas de recursos

--- a/views/mobile/genres/genres.ejs
+++ b/views/mobile/genres/genres.ejs
@@ -23,7 +23,7 @@
 	<br><br>
 
 	<div id="conte" style="display: none;">
-		<div id="respu"></div>
+		<div id="imgconte"><div id="respu"></div></div>
 	</div>
 
 </body>
