--- a/views/mobile/login/index.ejs
+++ b/views/mobile/login/index.ejs
@@ -21,8 +21,8 @@
                 <div class="signIn">
                     <form method="post" action="/signIn">
                         <div class="flex flex-row items-center justify-center mt-7">
-                            <div class="flex flex-col items-center justify-center 3/5"> 
-                                <input type="text" placeholder="User" name="user" class="rounded-md mb-4 text-black px-2 h-9">
+                            <div class="flex flex-col items-center justify-center 3/5">
+                                <input type="text" placeholder="Email" name="email" class="rounded-md mb-4 text-black px-2 h-9">
                                 <input type="password" placeholder="Password" name="pass" class="rounded-md text-black px-2 h-9">
                             </div>
                         </div>
@@ -33,8 +33,9 @@
                 </div>
                 <div class="signUp">
                     <form method="post" action="/signUp" class="flex flex-col justify-center items-center h-full text-center">
-                        <input type="text" placeholder="User" name="user" class="rounded-md mb-4 text-black px-2 h-9">
-                        <input type="password" placeholder="Password" name="pass" class="rounded-md text-black px-2 h-9">
+                        <input type="text" placeholder="Username" name="username" class="rounded-md mb-4 text-black px-2 h-9">
+                        <input type="text" placeholder="Email" name="email" class="rounded-md mb-4 text-black px-2 h-9">
+                        <input type="password" placeholder="Password" name="password" class="rounded-md text-black px-2 h-9">
                         <input type="submit" value="Sign Up" class="text-xl bg-red-100 w-24 h-9 rounded-md cursor-pointer">
                     </form>
                 </div>
