--- a/views/mobile/login/index.ejs
+++ b/views/mobile/login/index.ejs
@@ -32,7 +32,7 @@
                     </form>
                 </div>
                 <div class="signUp">
-                    <form method="post" action="/signUp" class="flex flex-col justify-center items-center h-full text-center">
+                    <form action="/signUp" method="post" class="flex flex-col justify-center items-center h-full text-center">
                         <input type="text" placeholder="Username" name="username" class="rounded-md mb-4 text-black px-2 h-9">
                         <input type="text" placeholder="Email" name="email" class="rounded-md mb-4 text-black px-2 h-9">
                         <input type="password" placeholder="Password" name="password" class="rounded-md text-black px-2 h-9">
