--- a/views/mobile/genres/genres.ejs
+++ b/views/mobile/genres/genres.ejs
@@ -11,6 +11,7 @@
 	
 </head>
 <body>
+	<h1 id="titulo-gen" class=".texto-white">generos disponibles</h1>
 	<div id="generos">
 	<button id="misterio" value="misterio">misterio</button>
 	<br>
@@ -24,6 +25,26 @@
 
 	<div id="conte" style="display: none;">
 		<div id="imgconte"><div id="respu"></div></div>
+	</div>
+
+	<div class="agregar" id="agregar">
+		<form>
+			<table border="1">
+				<tr><th colspan="2">agregar generos</th></tr>
+				<tr>
+					<th>nombre del genero</th>
+					<th><input type="text" name="gen_name" id="gen_name"></th>
+				</tr>
+				<tr>
+					<th>selecciones una imagen</th>
+					<th><input type="file" name="img_gen" id="img_gen"></th>
+				</tr>
+				<tr>
+					<th><input type="submit" name="Enviar" value="subir"></th>
+					<th><input type="reset" name="borrar" value="borrar"></td>
+				</tr>
+			</table>
+		</form>
 	</div>
 
 </body>
