--- a/views/mobile/nav/index.html
+++ b/views/mobile/nav/index.html
@@ -11,14 +11,49 @@
 
 </head>
 
-<nav class="p-10 fondo-black shadow">
-  <div class="texto-white">
-    <span class=" text-3xl cursor-pointer">
+<nav class="p-10 fondo-black shadow md:flex md:items-center justify-between">
+  <div class="texto-white flex justify-between items-center">
+    <span class=" text-2xl cursor-pointer">
       <i class="fa-solid fa-book-open"></i>
       Book Lovers
-
     </span>
-
+    <span class="text-3xl cursor-pointer mx-2 md:hidden block">
+      <i class="fa-solid fa-bars" onclick="Menu(this)"></i>
+    </span>
   </div>
 
+  <ul class="texto-white md:flex md:items-center z-[-1] md:z-auto 
+  md:static absolute fondo-black w-full left-0 md:w-auto
+  md:py-0 py-4 md:pl-0 pl-7 md:opacity-100 opacity-0 top-[-400px] 
+  transition-all ease-in duration-500"> 
+    <li class="mx-4 my-6 md:my-0">
+      <a href="#" class="text-xl">Home</a>
+    </li>
+    <li class="mx-4 my-6 md:my-0">
+      <a href="#" class="text-xl">Genres</a>
+    </li>
+    <li class="mx-4 my-6 md:my-0">
+      <a href="#" class="text-xl">Forum</a>
+    </li>
+    <li class="mx-4 my-6 md:my-0">
+      <a href="#" class="text-xl">About</a>
+    </li>
+    <li class="mx-4 my-6 md:my-0">
+      <a href="#" class="text-xl">Sign in</a>
+    </li>
+    <li class="mx-4 my-6 md:my-0">
+      <a href="#" class="text-xl">Sign up</a>
+    </li>
+  </ul>
+
 </nav>
+
+<script>
+  function Menu(e){
+    let list = document.querySelector('ul');
+    e.name === 'menu' ? (e.name = "close",list.classList.
+    add('top-[80px]'), list.classList.add('opacity-100')) : 
+    (e.name = "menu",list.classList.remove('top-[80px]'),
+    list.classList.remove('opacity-100'))
+  }
+</script>
