--- a/views/mobile/login/index.ejs
+++ b/views/mobile/login/index.ejs
@@ -19,11 +19,11 @@
             </div>
             <div>
                 <div class="signIn">
-                    <form method="post" action="/signIn">
+                    <form action="/signIn" method="post" >
                         <div class="flex flex-row items-center justify-center mt-7">
                             <div class="flex flex-col items-center justify-center 3/5">
                                 <input type="text" placeholder="Email" name="email" class="rounded-md mb-4 text-black px-2 h-9">
-                                <input type="password" placeholder="Password" name="pass" class="rounded-md text-black px-2 h-9">
+                                <input type="password" placeholder="Password" name="password" class="rounded-md text-black px-2 h-9">
                             </div>
                         </div>
                         <div class="flex justify-center pb-2 mt-4">
