se puede mandar datos a la db

--- a/views/mobile/genres/genres.ejs
+++ b/views/mobile/genres/genres.ejs
@@ -28,7 +28,7 @@
 	</div>
 
 	<div class="agregar" id="agregar">
-		<form>
+		<form  method="post" action="/subir">
 			<table border="1">
 				<tr><th colspan="2">agregar generos</th></tr>
 				<tr>
@@ -37,7 +37,7 @@
 				</tr>
 				<tr>
 					<th>selecciones una imagen</th>
-					<th><input type="file" name="img_gen" id="img_gen"></th>
+					<th><input type="text" name="img_gen" id="img_gen"></th>
 				</tr>
 				<tr>
 					<th><input type="submit" name="Enviar" value="subir"></th>
