--- a/views/mobile/footer/index.html
+++ b/views/mobile/footer/index.html
@@ -1,1 +1,27 @@
-Soft Kitty
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/tailwindcss.css">
+  
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://kit.fontawesome.com/ca713a058f.js" crossorigin="anonymous"></script>
+  
+  </head>
+  
+  <nav class="p-10 mt-80 fondo-black shadow md:flex md:items-center justify-between ">
+    <div class="texto-white flex justify-between items-center">
+      <span class=" text-2xl cursor-pointer">
+        Hey! It's a footer!
+      </span>
+      <span class="text-3xl cursor-pointer mx-2 md:hidden block">
+        
+      </span>
+    </div>
+  
+  
+  </nav>
+  
+  
