--- a/views/mobile/home/index.ejs
+++ b/views/mobile/home/index.ejs
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/tailwindcss.css">
+
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://kit.fontawesome.com/ca713a058f.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
-   
+   <span class="z-[-2] texto-white"> Testing include! this is our home file!</span>
 
-    esto es una prueba del home
 </body>
 </html>
 
