--- a/views/mobile/nav/index.html
+++ b/views/mobile/nav/index.html
@@ -11,9 +11,9 @@
 
 </head>
 
-<nav class="p-10 fondo-black shadow md:flex md:items-center justify-between">
+<nav class="p-10 fondo-black shadow d:flex md:items-center justify-between md:static">
   <div class="texto-white flex justify-between items-center">
-    <span class=" text-2xl cursor-pointer">
+    <span class=" text-2xl cursor-pointer z-20">
       <i class="fa-solid fa-book-open"></i>
       Book Lovers
     </span>
@@ -22,8 +22,8 @@
     </span>
   </div>
 
-  <ul class="texto-white md:flex md:items-center z-[-1] md:z-auto 
-  md:static absolute fondo-black w-full left-0 md:w-auto
+  <ul class="texto-white md:flex md:items-center md: z-0
+  md:relative absolute fondo-black w-full left-0 md:w-auto
   md:py-0 py-4 md:pl-0 pl-7 md:opacity-100 opacity-0 top-[-400px] 
   transition-all ease-in duration-500"> 
     <li class="mx-4 my-6 md:my-0">
