--- a/views/mobile/index.ejs
+++ b/views/mobile/index.ejs
@@ -15,7 +15,7 @@
 </head>
 <body class="z-auto">
     <%- include('nav/nav.html') %>
-    <%- include('home/index.ejs') %>
+    <%- include('home/home.ejs') %>
     <br>
     <a href="/about">Hello World</a>
     <br>
