--- a/views/mobile/genres/genres.ejs
+++ b/views/mobile/genres/genres.ejs
@@ -24,7 +24,11 @@
 	<br><br>
 
 	<div id="conte" style="display: none;">
-		<div id="imgconte"><div id="respu"></div></div>
+		<div id="imgconte">
+			<div id="respu">
+			
+			</div>
+		</div>
 	</div>
 
 	<div class="agregar" id="agregar">
