--- a/views/mobile/genres/genres.ejs
+++ b/views/mobile/genres/genres.ejs
@@ -26,7 +26,7 @@
 	<div id="conte" style="display: none;">
 		<div id="imgconte"><div id="respu"></div></div>
 	</div>
-
+	 <!--AGREGAR GENEROS-->
 	<div class="agregar" id="agregar">
 		<form  method="post" action="/subir">
 			<table border="1">
