--- a/views/mobile/footer/footer.html
+++ b/views/mobile/footer/footer.html
@@ -14,7 +14,8 @@
   <nav class="p-10 mt-80 fondo-black shadow md:flex md:items-center justify-between ">
     <div class="texto-white flex justify-between items-center">
       <span class=" text-2xl cursor-pointer">
-        
+        <i class="fa-solid fa-book-open"></i>
+        Book Lovers
       </span>
       <span class="text-3xl cursor-pointer mx-2 md:hidden block">
         
