--- a/views/mobile/home/home.ejs
+++ b/views/mobile/home/home.ejs
@@ -12,8 +12,9 @@
     <title>Document</title>
 </head>
 <body>
-   <span class="z-[-2] texto-white"> Testing include! this is our home file!</span>
-
+  <div class="conatiner-body relative z-[-2]">
+    <span class=" texto-white"> Testing include! this is our home file!</span>
+  </div>
 </body>
 </html>
 
