--- a/views/mobile/nav/nav.html
+++ b/views/mobile/nav/nav.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<nav class="p-10 fondo-black shadow d:flex md:items-center justify-between md:static">
+<nav class="p-10 fondo-black z-10 shadow md:flex md:items-center justify-between md:absolute">
   <div class="texto-white flex justify-between items-center">
     <span class=" text-2xl cursor-pointer z-20">
       <i class="fa-solid fa-book-open"></i>
@@ -22,7 +22,7 @@
     </span>
   </div>
 
-  <ul class="texto-white md:flex md:items-center md: z-0
+  <ul class="texto-white z-[-1] md:flex md:items-center 
   md:relative absolute fondo-black w-full left-0 md:w-auto
   md:py-0 py-4 md:pl-0 pl-7 md:opacity-100 opacity-0 top-[-400px] 
   transition-all ease-in duration-500"> 
