--- a/views/mobile/home/home.ejs
+++ b/views/mobile/home/home.ejs
@@ -12,9 +12,11 @@
     <title>Document</title>
 </head>
 <body>
+  <%- include('../nav/nav.html') %>
   <div class="conatiner-body relative z-[-2]">
     <span class=" texto-white"> Testing include! this is our home file!</span>
   </div>
+  <%- include('../footer/footer.html') %>
 </body>
 </html>
 
