--- a/views/mobile/index.ejs
+++ b/views/mobile/index.ejs
@@ -13,8 +13,8 @@
     <script src="https://kit.fontawesome.com/ca713a058f.js" crossorigin="anonymous"></script>
 
 </head>
-<body class="z-auto">
-    <%- include('nav/nav.html') %>
+<body >
+    
     <%- include('home/home.ejs') %>
     <br>
     <a href="/about">Hello World</a>
@@ -27,7 +27,7 @@
         <input type="submit" value="Prueba" class="text-xl bg-teal-300 w-24 h-9 rounded-md cursor-pointer">
     </form>
 
-    <%- include('footer/footer.html') %>
+    
 </body>
 </html>
 
