--- a/views/mobile/user/user.html
+++ b/views/mobile/user/user.html
@@ -14,7 +14,7 @@
 <body>
   <%- include('../nav/nav.html') %>
   <div class="conatiner-body relative z-[-2]">
-    <span class=" texto-white"> This is the about</span>
+    <span class=" texto-white"> Users page</span>
   </div>
   <%- include('../footer/footer.html') %>
 </body>
