--- a/views/mobile/nav/nav.html
+++ b/views/mobile/nav/nav.html
@@ -11,18 +11,20 @@
 
 </head>
 
-<nav class="p-10 fondo-black z-10 shadow md:flex md:items-center justify-between md:absolute">
-  <div class="texto-white flex justify-between items-center">
-    <span class=" text-2xl cursor-pointer z-20">
-      <i class="fa-solid fa-book-open"></i>
-      Book Lovers
-    </span>
-    <span class="text-3xl cursor-pointer mx-2 md:hidden block">
-      <i class="fa-solid fa-bars" onclick="Menu(this)"></i>
-    </span>
+<nav class="p-10 shadow relative flex md:items-center justify-between ">
+  <div class="fondo-black shadow relative z-30 flex-1">
+    <div class="texto-white flex justify-between items-center ">
+      <span class=" text-2xl cursor-pointer z-30">
+        <i class="fa-solid fa-book-open"></i>
+        Book Lovers
+      </span>
+      <span class="text-3xl cursor-pointer mx-2 z-30 md:hidden block">
+        <i class="fa-solid fa-bars" onclick="Menu(this)"></i>
+      </span>
+    </div>
   </div>
 
-  <ul class="texto-white z-[-1] md:flex md:items-center 
+  <ul class="texto-white z-20 md:flex md:items-center 
   md:relative absolute fondo-black w-full left-0 md:w-auto
   md:py-0 py-4 md:pl-0 pl-7 md:opacity-100 opacity-0 top-[-400px] 
   transition-all ease-in duration-500"> 
