--- a/views/mobile/nav/nav.html
+++ b/views/mobile/nav/nav.html
@@ -11,8 +11,8 @@
 
 </head>
 
-<nav class="p-0 shadow relative flex md:items-center">
-  <div class="fondo-black shadow relative z-30 flex-1">
+<nav class="shadow relative flex md:items-center justify-between ">
+  <div class="p-10 fondo-black shadow relative z-30 flex-1">
     <div class="texto-white flex justify-between items-center ">
       <span class=" text-2xl cursor-pointer z-30">
         <i class="fa-solid fa-book-open"></i>
