--- a/views/mobile/about/about.ejs
+++ b/views/mobile/about/about.ejs
@@ -13,7 +13,7 @@
 </head>
 <body>
   <%- include('../nav/nav.html') %>
-  <div class="conatiner-body relative z-[-2]">
+  <div class="conatiner-body relative z-10">
     <span class=" texto-white"> This is the about</span>
   </div>
   <%- include('../footer/footer.html') %>
