--- a/views/mobile/user/user.html
+++ b/views/mobile/user/user.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <%- include('../nav/nav.html') %>
-  <div class="conatiner-body relative z-[-2]">
+  <div class="conatiner-body relative z-10">
     <span class=" texto-white"> Users page</span>
   </div>
   <%- include('../footer/footer.html') %>
