--- a/views/mobile/footer/footer.html
+++ b/views/mobile/footer/footer.html
@@ -27,7 +27,7 @@
       </span>
 
       <div class="fondo-gray mt-3 flex justify-center"> 
-        <span class="text-2xl my-3 mx-4 inline-flex items-center">We are open for works! 
+        <span class="text-2xl my-3 mx-4 inline-flex items-center">We are open for work! 
           Thunderbit Fiverr
           <img class="object-scale-down h-16 w-16" src="/images/fiverr.png">
         </span>
