--- a/views/mobile/genres/genres.ejs
+++ b/views/mobile/genres/genres.ejs
@@ -13,16 +13,30 @@
 <body>
 
 	<h1 id="titulo-gen" class=".texto-white">generos disponibles</h1>
-	<div id="generos">
-	<a href="/getGenres"><button id="misterio" value="misterio">misterio</button></a>
-	<br>
+	<div id="generos1">
+	<button id="misterio" value="misterio">misterio</button>
 	<button id="accion" value="accion">accion</button>
-	<button id="xd">ej1</button>
-	<button id="cfg">ej2</button>
-	<button id="dfgh">ej3</button>
-	
+	<button id="comedia" value="comedia">comedia</button>
 	</div>
 	<br><br>
+	<div id="generos2">
+	<button id="psicodelico" value="psicodelico">psicodelico</button>
+	<button id="terror" value="terror">terror</button>
+	<button id="romance" value="romance">romance</button>
+	</div>
+	<br><br>
+	<div id="generos3">
+	<button id="infantil" value="infantil">infantil</button>
+	<button id="filosofico" value="filosofico">filosofico</button>
+	<button id="aventura" value="aventura">aventura</button>
+	</div>
+	<br><br>
+	<div id="generos4">
+	<button id="historicos" value="historicos">historicos</button>
+	<button id="biograficos" value="biograficos">biograficos</button>
+	<button id="ciencia_ficcion" value="ciencia_ficcion">ciencia_ficcion</button>
+	</div>
+
 
 	<div id="conte" style="display: none;">
 		<div id="imgconte">
