--- a/views/mobile/about/about.ejs
+++ b/views/mobile/about/about.ejs
@@ -13,8 +13,26 @@
 </head>
 <body>
   <%- include('../nav/nav.html') %>
-  <div class="conatiner-body relative z-10">
-    <span class=" texto-white"> This is the about</span>
+  <div class="conatiner-body relative z-10 flex flex-col items-center">
+    <div class="p-5 m-5 text-center w-1/3 rounded-md border-y-4 borde-red">
+      <p class="text-4xl texto-white ">About us</p>
+    </div>
+    <div class="p-6 m-6 rounded-md fondo-white texto-grey text-center">
+      <p class="text-2xl p-5">A warm welcome to our visitors and thank you for your time to reach this page!</p>
+      <p class="p-5">We are ThunderBit, a small team of Computer Engineers. 
+                      This page was made as a sample, to experiment and showcase our skills. 
+                      If you feel this is the kind of work you need, contact us without shame!</p>
+       <p class="text-2xl p-5"> Thanks again and have a great day!</p>
+    </div>
+    <div class="py-10 texto-white text-center flex justify-center">
+      <span class="text-2xl"> If you are interested in working with us, please check out our gigs on Fiverr!</span>
+    </div>
+    <div class="p-6 m-6 texto-white text-center flex justify-center">
+      <span class="my-3 mx-4 inline-flex items-center">
+        <a href="https://www.fiverr.com/thunderbitcode"><p class="hover-red duration-700 text-3xl pt-5 underline underline-offset-8"> Thunderbitcode</p></a>
+        <img class="object-scale-down h-32 w-32" src="/images/Thunderbitlogo.png" alt="logo">
+      </span>
+    </div>
   </div>
   <%- include('../footer/footer.html') %>
 </body>
