--- a/views/mobile/footer/footer.html
+++ b/views/mobile/footer/footer.html
@@ -11,7 +11,7 @@
   
   </head>
   
-  <footer class="p-10 mt-80 fondo-black shadow md:flex md:items-center justify-between ">
+  <footer class="p-10 mt-6 fondo-black shadow md:flex md:items-center justify-between ">
     <div class="texto-white flex flex-col justify-between">
       <span class=" text-xl cursor-pointer">
         <i class="fa-solid fa-book-open texto-red"></i>
@@ -26,7 +26,7 @@
         <i class="fa-brands fa-square-github"></i>
       </span>
 
-      <div class="fondo-gray mt-3 flex justify-center"> 
+      <div class="fondo-gray rounded-md mt-3 flex justify-center"> 
         <span class="text-2xl my-3 mx-4 inline-flex items-center">We are open for work! 
           Thunderbit Fiverr
           <img class="object-scale-down h-16 w-16" src="/images/fiverr.png">
