--- a/views/mobile/login/index.ejs
+++ b/views/mobile/login/index.ejs
@@ -42,5 +42,7 @@
             </div>
         </div>
     </div>
+    <h1 class="texto-white">Usuario: <%= session.username %></h1>
+    <h1 class="texto-white">ID Usuario: <%= session.id_users %></h1>
 </body>
 </html>
