--- a/views/mobile/index.ejs
+++ b/views/mobile/index.ejs
@@ -23,6 +23,7 @@
     <br>
     <a href="/genres">Generos</a>
     <br>
+    <a href="/getGeneros">pruebadecantidadgererso</a>
     <form method="post" action="/prueba" >
         <input type="submit" value="Prueba" class="text-xl bg-teal-300 w-24 h-9 rounded-md cursor-pointer">
     </form>
