--- a/views/mobile/genres/genres.ejs
+++ b/views/mobile/genres/genres.ejs
@@ -90,7 +90,7 @@
 	<section class="flex-container"> 
 		<%for (var i = 0 ; i < result.length; i++) { %>
 			<div class="caja">
-				<button> <%=result[i].name%> </button>
+				<button id="<%=result[i].id_genres%>"> <%=result[i].name%> </button>
 			</div>
 		<% } %>
 	</section>
