--- a/views/mobile/user/user.ejs
+++ b/views/mobile/user/user.ejs
@@ -13,8 +13,15 @@
 </head>
 <body>
   <%- include('../nav/nav.html') %>
-  <div class="conatiner-body relative z-10">
+  <div class="container-body relative z-10">
     <span class=" texto-white"> Users page</span>
+
+    <!--Pruebas de Session-->
+    <h1>Usuario: <%= session.username == "" ? "nadie" : session.username %></h1>
+    <h1>ID Usuario: <%= session.id_users == "" ? "ID nadie" : session.id_users %></h1>
+    <br>
+    <a href="/signOut">Logout</a>
+
   </div>
   <%- include('../footer/footer.html') %>
 </body>
