--- a/views/mobile/genres/formularios.ejs
+++ b/views/mobile/genres/formularios.ejs
@@ -32,12 +32,12 @@
 	</div>
 
 	<div>
-		<form><!--formulario de agregar libros-->
+		<form action="/responder" method="post"><!--formulario de agregar libros-->
 			<table border="1">
 				<tr><th colspan="2">respuesta</th></tr>
 				<tr>
 					<th>respuesta al post</th>
-					<th><input type="text" name="gen_name" id="gen_name"></th>
+					<th><input type="text" name="respuesta" id="respuesta"></th>
 				</tr>
 				
 					<th><input type="submit" name="Enviar" value="subir"></th>
