--- a/views/mobile/index.ejs
+++ b/views/mobile/index.ejs
@@ -21,7 +21,7 @@
     <br>
     <a href="/home">Home</a>
     <br>
-    <a href="/genres">Generos</a>
+    <a href="/getGeneros">Generos</a>
     <br>
     <a href="/getGeneros">pruebadecantidadgererso</a>
     <form method="post" action="/prueba" >
