--- a/views/mobile/home/home.ejs
+++ b/views/mobile/home/home.ejs
@@ -20,7 +20,7 @@
     <br>
     <a href="/home">Home</a>
     <br>
-    <a href="/genres">Generos</a>
+    <a href="/getGen">Generos</a>
     <br>
     <form method="post" action="/prueba" >
         <input type="submit" value="Prueba" class="text-xl bg-teal-300 w-24 h-9 rounded-md cursor-pointer">
