--- a/views/mobile/about/about.ejs
+++ b/views/mobile/about/about.ejs
@@ -18,7 +18,7 @@
       <p class="text-4xl texto-white ">About us</p>
     </div>
     <div class="p-6 m-6 rounded-md fondo-white texto-grey text-center">
-      <p class="text-2xl p-5">A warm welcome to our visitors and thank you for your time to reach this page!</p>
+      <p class="text-2xl p-5">A warm welcome to our visitors and thank you for the time taken to reach this page!</p>
       <p class="p-5">We are ThunderBit, a small team of Computer Engineers. 
                       This page was made as a sample, to experiment and showcase our skills. 
                       If you feel this is the kind of work you need, contact us without shame!</p>
