--- a/views/mobile/nav/nav.html
+++ b/views/mobile/nav/nav.html
@@ -38,13 +38,13 @@
       <a href="#" class="text-xl">Forum</a>
     </li>
     <li class="mx-4 my-6 md:my-0">
-      <a href="#" class="text-xl">About</a>
+      <a href="/about" class="text-xl">About</a>
     </li>
     <li class="mx-4 my-6 md:my-0">
-      <a href="#" class="text-xl">Sign in</a>
+      <a href="/login" class="text-xl">Sign in</a>
     </li>
     <li class="mx-4 my-6 md:my-0">
-      <a href="#" class="text-xl">Sign up</a>
+      <a href="/login" class="text-xl">Sign up</a>
     </li>
   </ul>
 
