--- a/views/mobile/genres/formularios.ejs
+++ b/views/mobile/genres/formularios.ejs
@@ -37,9 +37,21 @@
 	</div>
 
 	<div>
-		<form action="/responder" method="post"><!--formulario de responder a un post-->
+		<form action="/responder" method="post" name="ansew_post"><!--formulario de responder a un post-->
 			<table border="1">
 				<tr><th colspan="2">respuesta</th></tr>
+				<tr>
+					<th>selecione cual post</th>
+					<th>
+						<select name="name_post" id="name_post" form="/responder">
+							<%for (var i = 0 ; i < result.posts.length; i++) { %>
+							<option value="<%=result.posts[i].id_posts%>">
+								<%=result.posts[i].title%>
+							</option>
+						<% } %>
+						</select>
+					</th>
+				</tr>
 				<tr>
 					<th>respuesta al post</th>
 					<th><input type="text" name="respuesta" id="respuesta"></th>
