--- a/views/mobile/post/post.ejs
+++ b/views/mobile/post/post.ejs
@@ -33,6 +33,11 @@
 		
 	</form>
 	</div>
-
+	<div>
+		<%for (var i = 0 ; i < result.answer.length; i++) { %>
+			<p><%=result.answer[i].content_answers%></p>
+			<br>
+		<% } %>
+	</div>
 </body>
 </html>
