--- a/views/mobile/user/user.ejs
+++ b/views/mobile/user/user.ejs
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 <body>
-  <%- include('../nav/nav.html') %>
+  <%- include('../nav/nav.ejs') %>
   <div class="container-body relative z-10">
     <span class=" texto-white"> Users page</span>
 
