--- a/views/mobile/about/about.ejs
+++ b/views/mobile/about/about.ejs
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 <body>
-  <%- include('../nav/nav.html') %>
+  <%- include('../nav/nav.ejs') %>
   <div class="conatiner-body relative z-10 flex flex-col items-center">
     <div class="p-5 m-5 text-center w-1/3 rounded-md border-y-4 borde-red">
       <p class="text-4xl texto-white ">About us</p>
