--- a/views/mobile/home/home.ejs
+++ b/views/mobile/home/home.ejs
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 <body>
-  <%- include('../nav/nav.html') %>
+  <%- include('../nav/nav.ejs') %>
   <div class="conatiner-body relative z-10">
     <span class=" texto-white"> Testing include! this is our home file!</span>
     <br>
