--- a/views/mobile/nav/nav.ejs
+++ b/views/mobile/nav/nav.ejs
@@ -40,11 +40,10 @@
     <li class="mx-4 my-6 md:my-0">
       <a href="/about" class="text-xl">About</a>
     </li>
-    <li class="mx-4 my-6 md:my-0">
-      <a href="/login" class="text-xl">Sign in</a>
-    </li>
-    <li class="mx-4 my-6 md:my-0">
-      <a href="/login" class="text-xl">Sign up</a>
+    <li class="inline-block mx-4 my-6 md:my-0">
+      <%= session.username == "" ? "nadie" : session.username %>
+      <a href="/login" class="text-xl">Sign in  /</a>
+      <a href="/login" class="text-xl">  Sign up</a>
     </li>
   </ul>
 
