--- a/views/mobile/post/post.html
+++ b/views/mobile/post/post.html
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 <body>
-  <%- include('../nav/nav.html') %>
+  <%- include('../nav/nav.ejs') %>
   <div class="conatiner-body relative z-10">
     <span class=" texto-white"> Post page</span>
   </div>
