--- a/views/mobile/nav/nav.ejs
+++ b/views/mobile/nav/nav.ejs
@@ -42,8 +42,7 @@
     </li>
     <li class="inline-block mx-4 my-6 md:my-0">
       <%= session.username == "" ? "nadie" : session.username %>
-      <a href="/login" class="text-xl">Sign in  /</a>
-      <a href="/login" class="text-xl">  Sign up</a>
+      <a href="/login" class="text-xl">Sign in  /</a><a href="/login" class="text-xl">  Sign up</a>
     </li>
   </ul>
 
