--- a/views/mobile/post/post.ejs
+++ b/views/mobile/post/post.ejs
@@ -24,11 +24,15 @@
 	</section>
 	<form action="/responder" method="post" name="ansew_post">
 		<tr>
-			<th>desea dejar una respuesta ?</th>
+			<th colspan="2">desea dejar una respuesta ?</th>
 			
 		</tr>
 		<tr>
-			<th><input type="text" name="respuesta" id="respuesta"></th>
+			<th colspan="2"><input type="text" name="respuesta" id="respuesta"></th>
+		</tr>
+		<tr>
+			<th><input type="submit" name="Enviar" value="responder"></th>
+			<th><input type="reset" name="borrar" value="borrar"></td>
 		</tr>
 		
 	</form>
