--- a/views/mobile/nav/nav.ejs
+++ b/views/mobile/nav/nav.ejs
@@ -41,7 +41,7 @@
       <a href="/about" class="text-xl">About</a>
     </li>
     <li class="inline-block mx-4 my-6 md:my-0">
-      <%= session.username == "" ? "Sign in??" : session.username %>
+      <%= session.username == "" ? "nadie" : session.username %>
       <a href="/login" class="text-xl">Sign in  /</a><a href="/login" class="text-xl">  Sign up</a>
     </li>
   </ul>
