--- a/views/mobile/post/post.ejs
+++ b/views/mobile/post/post.ejs
@@ -22,19 +22,19 @@
 			<br>
 		</div>
 	</section>
-	<form action="/responder" method="post" name="ansew_post">
-		<tr>
-			<th colspan="2">desea dejar una respuesta ?</th>
-			
-		</tr>
-		<tr>
-			<th colspan="2"><input type="text" name="respuesta" id="respuesta"></th>
-		</tr>
-		<tr>
-			<th><input type="submit" name="Enviar" value="responder"></th>
-			<th><input type="reset" name="borrar" value="borrar"></td>
-		</tr>
-		
+	<form action="/responder" method="post" name="answer_post">
+		<div class="pt-4 flex flex-col justify-center align-middle items-center">
+			<div>
+				<p>Publish an Answer to the Post?</p>
+			</div>
+			<div>
+				<input type="text" name="respuesta" id="respuesta"  class="rounded-md text-black px-2 h-9 border-black border-2 bg-gray-100">
+			</div>
+			<div class="flex flex-row justify-center w-full">
+				<input type="submit" name="Enviar" value="responder" class="cursor-pointer">
+				<input type="reset" name="borrar" value="borrar" class="cursor-pointer">
+			</div>
+		</div>
 	</form>
 	</div>
 	<div>
