eliminar redundancias y cambio de ruta

--- a/views/mobile/index.ejs
+++ b/views/mobile/index.ejs
@@ -21,9 +21,9 @@
     <br>
     <a href="/home">Home</a>
     <br>
-    <a href="/getGeneros">Generos</a>
+    <a href="/genres">Generos</a>
     <br>
-    <a href="/getGeneros">pruebadecantidadgererso</a>
+    <a href="/genres">pruebadecantidadgererso</a>
     <form method="post" action="/prueba" >
         <input type="submit" value="Prueba" class="text-xl bg-teal-300 w-24 h-9 rounded-md cursor-pointer">
     </form>
