--- a/views/mobile/genres/genres.ejs
+++ b/views/mobile/genres/genres.ejs
@@ -33,7 +33,7 @@
 	</div>
 	 <!--AGREGAR GENEROS-->
 	<div class="agregar" id="agregar">
-		<form  method="post" action="/subir">
+		<form  method="post" action="/newgen">
 			<table border="1">
 				<tr><th colspan="2">agregar generos</th></tr>
 				<tr>
