--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 <body>
-  <%- include('../nav/nav.ejs') %>
+  <%- include('./nav.ejs') %>
   <div class="conatiner-body relative z-10">
     <span class=" texto-white"> Testing include! this is our home file!</span>
     <br>
@@ -26,7 +26,7 @@
         <input type="submit" value="Prueba" class="text-xl bg-teal-300 w-24 h-9 rounded-md cursor-pointer">
     </form>
   </div>
-  <%- include('../footer/footer.html') %>
+  <%- include('./footer.html') %>
 </body>
 </html>
 
