--- a/views/about.ejs
+++ b/views/about.ejs
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 <body>
-  <%- include('../nav/nav.ejs') %>
+  <%- include('./nav.ejs') %>
   <div class="conatiner-body relative z-10 flex flex-col items-center">
     <div class="p-5 m-5 text-center w-1/3 rounded-md border-y-4 borde-red">
       <p class="text-4xl texto-white ">About us</p>
@@ -34,6 +34,6 @@
       </span>
     </div>
   </div>
-  <%- include('../footer/footer.html') %>
+  <%- include('./footer.html') %>
 </body>
 </html>
