--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
 </head>
 <body class="z-auto">
 
-    <%- include('home/home.ejs') %>
+    <%- include('./home.ejs') %>
     <br>
     <a href="/about">Hello World</a>
     <br>
