--- a/views/user.ejs
+++ b/views/user.ejs
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 <body>
-  <%- include('../nav/nav.ejs') %>
+  <%- include('./nav.ejs') %>
   <div class="container-body relative z-10">
     <span class=" texto-white"> Users page</span>
 
@@ -23,6 +23,6 @@
     <a href="/signOut">Logout</a>
 
   </div>
-  <%- include('../footer/footer.html') %>
+  <%- include('./footer.html') %>
 </body>
 </html>
